--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.11",
     "embla-carousel-react": "^8.0.2",
-    "input-otp": "^1.2.4",
-    "jsqr": "^1.4.0",
     "lodash.capitalize": "^4.2.1",
     "lodash.get": "^4.4.2",
     "lucide-react": "^0.418.0",
@@ -49,13 +47,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-resizable-panels": "^2.0.11",
-    "react-webcam": "^7.2.0",
     "read-excel-file": "^5.7.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
-    "xlsx": "npm:@e965/xlsx",
-    "zod": "^3.22.4"
+    "xlsx": "npm:@e965/xlsx"
   }
 }
