--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
     "@wojtekmaj/react-qr-svg": "^1.0.0",
+    "add": "^2.0.6",
     "any-date-parser": "^1.5.4",
     "autosize": "^6.0.1",
+    "bun-types": "^1.1.24",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
