--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hook-form": "^7.51.0",
     "react-resizable-panels": "^2.0.11",
     "read-excel-file": "^5.7.1",
+    "rou3": "^0.5.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
