--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.11",
+    "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.0.2",
     "lodash.capitalize": "^4.2.1",
     "lodash.get": "^4.4.2",
