--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@react-input/mask": "^1.2.5",
+    "@react-input/mask": "^1.2.11",
+    "@rivercode/facebook-conversion-api": "^1.1.8",
     "@types/autosize": "^4.0.3",
+    "@types/facebook-nodejs-business-sdk": "^20.0.2",
     "@types/lodash.capitalize": "^4.2.9",
     "@types/lodash.get": "^4.4.9",
     "@types/react": "^18.2.65",
@@ -34,17 +36,22 @@
     "bun-types": "^1.1.24",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "crypto": "^1.0.1",
     "date-fns": "^3.3.1",
     "dayjs": "^1.11.11",
     "drizzle-kit": "^0.24.1",
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.0.2",
+    "facebook-nodejs-business-sdk": "^21.0.2",
+    "fs": "^0.0.1-security",
     "lodash.capitalize": "^4.2.1",
     "lodash.get": "^4.4.2",
     "lucide-react": "^0.418.0",
     "md5": "^2.3.0",
     "next-themes": "^0.3.0",
+    "path": "^0.12.7",
     "prisma": "^5.13.0",
+    "qr-scanner": "^1.4.2",
     "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-arborist": "^3.4.0",
@@ -52,6 +59,7 @@
     "react-data-grid": "^7.0.0-beta.43",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-qr-code": "^2.0.15",
     "react-resizable-panels": "^2.0.11",
     "read-excel-file": "^5.7.1",
     "rou3": "^0.5.1",
@@ -60,7 +68,6 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "xlsx": "npm:@e965/xlsx",
-    "react-qr-code": "^2.0.15",
-    "qr-scanner": "^1.4.2"
+    "@radix-ui/react-aspect-ratio": "^1.1.0"
   }
 }
