--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.0.2",
@@ -67,7 +68,6 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
-    "xlsx": "npm:@e965/xlsx",
-    "@radix-ui/react-aspect-ratio": "^1.1.0"
+    "xlsx": "npm:@e965/xlsx"
   }
 }
