--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/facebook-nodejs-business-sdk": "^20.0.2",
     "@types/lodash.capitalize": "^4.2.9",
     "@types/lodash.get": "^4.4.9",
+    "@types/lodash.trim": "^4.5.9",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
@@ -45,8 +46,10 @@
     "embla-carousel-react": "^8.0.2",
     "facebook-nodejs-business-sdk": "^21.0.2",
     "fs": "^0.0.1-security",
+    "goober": "^2.1.16",
     "lodash.capitalize": "^4.2.1",
     "lodash.get": "^4.4.2",
+    "lodash.trim": "^4.5.1",
     "lucide-react": "^0.418.0",
     "md5": "^2.3.0",
     "next-themes": "^0.3.0",
@@ -60,6 +63,7 @@
     "react-data-grid": "^7.0.0-beta.43",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-movable": "^3.3.1",
     "react-qr-code": "^2.0.15",
     "react-resizable-panels": "^2.0.11",
     "read-excel-file": "^5.7.1",
