--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "facebook-nodejs-business-sdk": "^21.0.2",
     "fs": "^0.0.1-security",
     "goober": "^2.1.16",
+    "input-otp": "^1.4.1",
     "lodash.capitalize": "^4.2.1",
     "lodash.get": "^4.4.2",
     "lodash.trim": "^4.5.1",
@@ -70,6 +71,7 @@
     "rou3": "^0.5.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "xlsx": "npm:@e965/xlsx"
