--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-hook-form": "^7.51.0",
     "react-movable": "^3.3.1",
     "react-qr-code": "^2.0.15",
+    "react-reader": "^2.0.11",
     "react-resizable-panels": "^2.0.11",
     "read-excel-file": "^5.7.1",
     "rou3": "^0.5.1",
