--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "drizzle-kit": "^0.24.1",
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.0.2",
+    "exceljs": "^4.4.0",
     "facebook-nodejs-business-sdk": "^21.0.2",
     "fs": "^0.0.1-security",
     "goober": "^2.1.16",
