--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
     "node_modules": true,
     ".vscode": true,
     ".gitignore": true,
@@ -9,5 +15,6 @@
   "typescript.preferences.autoImportFileExcludePatterns": [
     "./index.tsx",
     "./server.ts"
-  ]
+  ],
+  "hide-files.files": []
 }
