--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@types/facebook-nodejs-business-sdk": "^20.0.2",
     "@types/lodash.capitalize": "^4.2.9",
     "@types/lodash.get": "^4.4.9",
+    "@types/lodash.snakecase": "^4.1.9",
     "@types/lodash.trim": "^4.5.9",
+    "@types/mime": "^4.0.0",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
@@ -51,6 +53,7 @@
     "input-otp": "^1.4.1",
     "lodash.capitalize": "^4.2.1",
     "lodash.get": "^4.4.2",
+    "lodash.snakecase": "^4.1.1",
     "lodash.trim": "^4.5.1",
     "lucide-react": "^0.418.0",
     "md5": "^2.3.0",
