--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@react-email/components": "^0.0.33",
+    "@react-email/render": "^1.0.5",
     "@react-input/mask": "^1.2.11",
     "@types/autosize": "^4.0.3",
     "@types/facebook-nodejs-business-sdk": "^20.0.2",
