feat: add Facebook pixel integration and payment pending handling; update environment configuration and remove deprecated email router

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ SMTP_SECURE=false
 SMTP_USER=your_smtp_username
 SMTP_PASS=your_smtp_password
 SMTP_FROM=info@esensi.online
+
+# Meta CAPIG Configuration
+FB_ACCESS_TOKEN=X
