--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "site-bf706e40-2a3a-4148-9cdd-75d4483328d7",
   "scripts": {
-    "startup": "ulimit -c 0; tailwindcss --watch -i ./app/css/global.css -o ./app/css/build.css --minify"
+    "startup": "ulimit -c 0; tailwindcss --watch -i ./app/css/global.css -o ./app/css/build.css --minify",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.12",
@@ -24,6 +25,7 @@
     "@react-email/components": "^0.0.33",
     "@react-email/render": "^1.0.5",
     "@react-input/mask": "^1.2.11",
+    "@react-pdf/renderer": "^4.3.0",
     "@types/autosize": "^4.0.3",
     "@types/facebook-nodejs-business-sdk": "^20.0.2",
     "@types/lodash.capitalize": "^4.2.9",
@@ -31,8 +33,10 @@
     "@types/lodash.snakecase": "^4.1.9",
     "@types/lodash.trim": "^4.5.9",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.3.0",
+    "@types/react-window": "^1.8.8",
     "@types/uuid": "^9.0.8",
     "@wojtekmaj/react-qr-svg": "^1.0.0",
     "add": "^2.0.6",
@@ -58,10 +62,12 @@
     "lodash.trim": "^4.5.1",
     "lucide-react": "^0.418.0",
     "md5": "^2.3.0",
-    "mime": "^4.0.6",
+    "mime": "^4.0.7",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.0",
+    "patch-package": "^8.0.0",
     "path": "^0.12.7",
+    "pdfjs-dist": "^5.0.375",
     "prisma": "^5.13.0",
     "qr-scanner": "^1.4.2",
     "quill": "^2.0.2",
@@ -72,13 +78,17 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-movable": "^3.3.1",
+    "react-pdf": "^9.2.1",
     "react-qr-code": "^2.0.15",
     "react-reader": "^2.0.11",
     "react-resizable-panels": "^2.0.11",
+    "react-resize-detector": "^12.0.2",
+    "react-window": "^1.8.11",
     "read-excel-file": "^5.7.1",
     "readable-stream": "^4.7.0",
     "rou3": "^0.5.1",
     "sonner": "^1.4.41",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
