--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     },
     "lib": [
       "ESNext",
-      "DOM"
+      "DOM",
+      "dom.iterable"
     ],
     "module": "esnext",
     "target": "esnext",
